--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,5 +1,7 @@
 .page__container {
   max-width: 1280px;
+  padding: 45px 50px 200px;
+  box-sizing: border-box;
   min-height: 100vh;
   margin: 0 auto;
 }
