--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,17 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
 
-
 /*header*/
 
 @import url(../blocks/page/__header/page__header.css);
+
+/*profile*/
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/page/__profile/page__profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__about/profile__about.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
