feat: Сделать header и profile адаптивными

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -5,3 +5,15 @@
   line-height: 1.22;
   grid-area: about;
 }
+
+@media (max-width: 768px) {
+  .profile__about {
+    text-align: center;
+  }
+}
+
+@media (max-width: 398px) {
+  .profile__about {
+    font-size: 14px;
+  }
+}
