--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,7 +1,20 @@
 .page__container {
   max-width: 1280px;
-  padding: 45px 50px 200px;
+  padding: 45px 50px 60px;
   box-sizing: border-box;
   min-height: 100vh;
   margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .page__container {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
+@media (max-width: 398px) {
+  .page__container {
+    padding: 28px 0 36px;
+  }
 }
