--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,5 +1,19 @@
 .page__header {
   min-height: 74px;
-  margin: 45px 0 40px 0;
+  margin-bottom: 40px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .page__header {
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 398px) {
+  .page__header {
+    padding: 0 20px;
+    min-height: 56px;
+  }
 }
