--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,3 +3,9 @@
   margin-right: 30px;
   border-radius: 50%;
 }
+
+@media (max-width: 768px) {
+  .profile__avatar {
+    margin: 0 0 26px 0;
+  }
+}
