--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,11 @@
 /*header*/
 
 @import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+
+/*content*/
+
+@import url(../blocks/page/__content/page__content.css);
 
 /*profile*/
 
@@ -21,4 +26,5 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__about/profile__about.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/add-button-wrapper/add-button-wrapper.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
