--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,3 +1,29 @@
 .profile__add-button {
-  margin: auto;
+  margin: 0 0 0 auto;
+  box-sizing: border-box;
+  width: 150px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  background-color: transparent;
+  border-radius: 2px;
+  display: flex;
+  padding: 0;
+  cursor: pointer;
+  transition: opacity .2s linear;
+}
+
+.profile__add-button:hover {
+  opacity: .6;
+}
+
+@media (max-width: 768px) {
+  .profile__add-button {
+    margin: 0;
+  }
+}
+
+@media (max-width: 398px) {
+  .profile__add-button {
+    width: 100%;
+  }
 }
