--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,13 @@
 .profile__edit-button {
   grid-area: edit-button;
   align-self: center;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  transition: opacity .2s linear;
+}
+
+.profile__edit-button:hover {
+  opacity: .6;
 }
