--- a/pages/index.css
+++ b/pages/index.css
@@ -26,5 +26,16 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__about/profile__about.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/add-button-wrapper/add-button-wrapper.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__add-button-img/profile__add-button-img.css);
+
+/*cards*/
+
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/page/__cards/page__cards.css);
+@import url(../blocks/cards/__list/cards__list.css);
+@import url(../blocks/cards/__card/cards__card.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__img/card__img.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like-button/card__like-button.css);
