feat: Сверстать footer и сделать адаптив

--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -2,6 +2,8 @@
   border: 0;
   padding: 0;
   background-color: transparent;
+  align-self: center;
+  justify-self: center;
   cursor: pointer;
   transition: opacity .2s linear;
 }
