--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,6 +1,6 @@
 .card__title {
   margin: 25px 0 31px 21px;
-  font-family: 'Inter';
+  font-family: 'Inter', Helvetica, sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
