--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
+@import url(../blocks/title/title.css);
 
 /*header*/
 
@@ -29,7 +30,7 @@
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__add-button-img/profile__add-button-img.css);
 
-/*cards*/
+/*cards and card*/
 
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/page/__cards/page__cards.css);
@@ -45,3 +46,20 @@
 @import url(../blocks/page/__footer/page__footer.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/*popup and form*/
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/page/__popup/page__popup.css);
+@import url(../blocks/page/__popup/_closed/page__popup_closed.css);
+@import url(../blocks/page/__popup/_opened/page__popup_opened.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__profile-info/form__profile-info.css);
+@import url(../blocks/form/__profile-owner-name/form__profile-owner-name.css);
+@import url(../blocks/form/__profile-owner-occupation/form__profile-owner-occupation.css);
+@import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__close-button/form__close-button.css);
