--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,7 @@
 @import url(../blocks/card/__img/card__img.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 
 /*footer*/
 
