--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,5 +1,9 @@
 .card__title {
-  margin: 25px 0 31px 21px;
+  font-family: 'Inter', Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 1.2;
+  margin: 25px 0 25px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
