--- a/blocks/form/__close-button/form__close-button.css
+++ b/blocks/form/__close-button/form__close-button.css
@@ -4,6 +4,11 @@
   right: -40px;
   cursor: pointer;
   transition: opacity .2s linear;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  border: 0;
+  background: url('../../../images/close-button.svg') 50% / cover no-repeat;
 }
 
 .form__close-button:hover {
