--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,11 +1,10 @@
 .popup__form {
   position: relative;
   background-color: #fff;
-  padding: 36px;
+  padding: 34px 36px 37px;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   min-width: 430px;
-  min-height: 330px;
   box-sizing: border-box;
 }
 
@@ -13,6 +12,5 @@
   .popup__form {
     padding: 25px 22px;
     min-width: 282px;
-    min-height: 322px;
   }
 }
