--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,7 +4,7 @@
   width: 150px;
   height: 50px;
   border: 2px solid #FFFFFF;
-  background-color: transparent;
+  background: url('../../../images/add-button.svg') 50% / 22px 22px no-repeat;
   border-radius: 2px;
   display: flex;
   padding: 0;
@@ -25,5 +25,6 @@
 @media (max-width: 398px) {
   .profile__add-button {
     width: 100%;
+    background-size: 16px 16px;
   }
 }
