--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,9 @@
 .profile__edit-button {
   grid-area: edit-button;
   align-self: center;
-  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  background: url('../../../images/edit-button.svg') 50% / cover no-repeat;
   border: 0;
   padding: 0;
   cursor: pointer;
@@ -10,4 +12,11 @@
 
 .profile__edit-button:hover {
   opacity: .6;
+}
+
+@media (max-width: 398px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+  }
 }
