--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,6 +4,9 @@
   font-size: 42px;
   line-height: 1.14;
   grid-area: name;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media (max-width: 768px) {
@@ -15,6 +18,5 @@
 @media (max-width: 398px) {
   .profile__name {
     font-size: 27px;
-    text-align: center;
   }
 }
