--- a/blocks/card/__img/card__img.css
+++ b/blocks/card/__img/card__img.css
@@ -1,6 +1,7 @@
 .card__img {
   width: 100%;
+  height: 100%;
+  opacity: .7;
   object-fit: cover;
-  grid-column: 1 / 3;
   border-radius: 10px 10px 0 0;
 }
