--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -1,4 +1,4 @@
-/* .form__close-button {
+.close-button {
   position: absolute;
   top: -40px;
   right: -40px;
@@ -8,18 +8,17 @@
   height: 32px;
   padding: 0;
   border: 0;
-  background: url('../../../images/close-button.svg') 50% / cover no-repeat;
+  background: url('../../images/close-button.svg') 50% / cover no-repeat;
 }
 
-.form__close-button:hover {
+.close-button:hover {
   opacity: .6;
 }
 
 @media (max-width: 598px) {
-  .form__close-button {
+  .close-button {
     right: 0;
     width: 20px;
     height: 20px;
   }
 }
- */
