--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
+@import url(../blocks/close-button/close-button.css);
 
 /*header*/
 
@@ -35,9 +36,11 @@
 @import url(../blocks/cards/__list/cards__list.css);
 @import url(../blocks/cards/__card/cards__card.css);
 @import url(../blocks/card/card.css);
+@import url(../blocks/card/__img-mask/card__img-mask.css);
 @import url(../blocks/card/__img/card__img.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__trash-button/card__trash-button.css);
 @import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 
 /*footer*/
@@ -58,3 +61,12 @@
 @import url(../blocks/form/__profile-info/form__profile-info.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
 @import url(../blocks/form/__close-button/form__close-button.css);
+
+/*card-review*/
+
+@import url(../blocks/card-review/card-review.css);
+@import url(../blocks/card-review/_opened/card-review_opened.css);
+@import url(../blocks/card-review/__container/card-review__container.css);
+@import url(../blocks/card-review/__title/card-review__title.css);
+@import url(../blocks/card-review/__img/card-review__img.css);
+@import url(../blocks/card-review/__close-button/card-review__close-button.css);
