--- a/blocks/card-review/card-review.css
+++ b/blocks/card-review/card-review.css
@@ -1,8 +1,11 @@
 .card-review {
   font-family: 'Inter';
   font-style: normal;
-  display: none;
+  display: flex;
   position: fixed;
+  visibility: hidden;
+  transition: visibility 0.1s, opacity 0.5s linear;
+  opacity: 0;
   left: 0;
   top: 0;
   width: 100%;
