--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,9 @@
 .popup {
-  display: none;
+  display: flex;
   position: fixed;
+  visibility: hidden;
+  transition: visibility 0.1s, opacity 0.5s linear;
+  opacity: 0;
   left: 0;
   top: 0;
   width: 100%;
