--- a/blocks/card-review/card-review.css
+++ b/blocks/card-review/card-review.css
@@ -1,14 +1,10 @@
 .card-review {
   font-family: 'Inter';
   font-style: normal;
+  margin: auto;
   display: flex;
-  position: fixed;
-  visibility: hidden;
-  transition: visibility 0.1s, opacity 0.5s linear;
-  opacity: 0;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, .5);
+  position: relative;
+  flex-direction: column;
+  row-gap: 10px;
+  justify-content: space-between;
 }
