--- a/pages/index.css
+++ b/pages/index.css
@@ -63,6 +63,8 @@
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__profile-info/form__profile-info.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__submit-button/_active/form__submit-button_active.css);
+@import url(../blocks/form/__submit-button/_disabled/form__submit-button_disabled.css);
 
 /*card-review*/
 
