--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -7,9 +7,16 @@
   padding: 0;
   border: 0;
   border-radius: 2px;
+  cursor: pointer;
+  background-color: #000;
+  transition: opacity .2s linear;
+  color: #fff;
+  margin-top: 45px;
 }
 
-
+.form__submit-button:hover {
+  opacity: .8;
+}
 
 @media (max-width: 398px) {
   .form__submit-button {
