--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,9 +1,10 @@
 .popup__form {
   position: relative;
   background-color: #fff;
-  padding: 34px 36px 37px;
+  padding: 34px 36px;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  height: 330px;
   min-width: 430px;
   box-sizing: border-box;
 }
@@ -11,6 +12,7 @@
 @media (max-width: 598px) {
   .popup__form {
     padding: 25px 22px;
+    min-height: 322px;
     min-width: 282px;
   }
 }
