--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,10 @@
 .profile__avatar {
-  width: 120px;
-  margin-right: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
   border-radius: 50%;
-}
-
-@media (max-width: 768px) {
-  .profile__avatar {
-    margin: 0 0 26px 0;
-  }
 }
