--- a/main.css
+++ b/main.css
@@ -8,7 +8,9 @@
 .page__content{min-height:75vh}@media (max-width:768px){.page__content{padding:0 30px}}@media (max-width:398px){.page__content{padding:0 20px}}
 .profile{color:#fff;font-family:Inter,Helvetica,sans-serif}
 .page__profile{align-items:center;display:flex;margin-bottom:50px}@media (max-width:768px){.page__profile{flex-direction:column}}@media (max-width:398px){.page__profile{margin-bottom:36px}}
-.profile__avatar{border-radius:50%;margin-right:30px;width:120px}@media (max-width:768px){.profile__avatar{margin:0 0 26px}}
+.profile__avatar-container{height:120px;margin-right:30px;position:relative;width:120px}@media (max-width:768px){.profile__avatar-container{margin:0 0 26px}}
+.profile__avatar{border-radius:50%;height:100%;left:0;-o-object-fit:cover;object-fit:cover;position:absolute;top:0;width:100%;z-index:0}
+.profile__avatar-mask{cursor:pointer;height:100%;left:0;opacity:0;position:absolute;top:0;transition:opacity .2s linear;width:100%;z-index:1}.profile__avatar-mask:hover{background:url(a086f758840ae814ecde.svg) 50%/26px 26px no-repeat;background-color:#000;opacity:.8}
 .profile__info{display:grid;gap:17px;grid-template-areas:"name edit-button" "job job";max-width:336px}@media (max-width:768px){.profile__info{margin-bottom:36px}}@media (max-width:398px){.profile__info{gap:13px}}
 .profile__name{font-size:42px;font-weight:500;grid-area:name;line-height:1.14;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:768px){.profile__name{text-align:center}}@media (max-width:398px){.profile__name{font-size:27px}}
 .profile__job{font-size:18px;font-weight:400;grid-area:job;line-height:1.22;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:768px){.profile__job{text-align:center}}@media (max-width:398px){.profile__job{font-size:14px}}
@@ -18,11 +20,13 @@
 .page__cards{margin-bottom:66px}@media (max-width:768px){.page__cards{margin-bottom:48px}}
 .cards__list{display:grid;gap:20px 17px;grid-template-columns:repeat(3,minmax(282px,1fr));justify-content:center;margin:0;overflow:hidden;padding-left:0}@media (max-width:998px){.cards__list{grid-template-columns:repeat(2,minmax(282px,320px))}}@media (max-width:660px){.cards__list{grid-template-columns:minmax(282px,320px)}}
 .cards__card{border-radius:10px;display:grid;grid-template-columns:1fr 60px;position:relative}
-.card{background-color:#fff}
+.card{background-color:#fff;font-family:Inter,Helvetica,sans-serif}
 .card__img-mask{background-color:#000;grid-column:1/3;height:282px}
 .card__img{border-radius:10px 10px 0 0;height:100%;-o-object-fit:cover;object-fit:cover;opacity:.7;width:100%}
-.card__title{font-family:Inter,Helvetica,sans-serif;font-size:24px;font-weight:900;line-height:1.2;margin:25px 0 25px 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__title{font-size:24px;font-weight:900;line-height:1.2;margin:25px 0 25px 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__like-container{align-items:center;display:flex;flex-direction:column;justify-content:center;row-gap:3px}
 .card__like-button{align-self:center;background:url(7913ddfd147a48616b09.svg) 50%/auto auto no-repeat;border:0;cursor:pointer;height:19px;justify-self:center;padding:0;transition:opacity .2s linear;width:22px}.card__like-button:hover{opacity:.5}
+.card__like-counter{font-size:13px;line-height:1.23;margin:0}
 .card__trash-button{background:url(823b0cf1b0b7e9cb7cad.svg) 50%/auto auto no-repeat;border:0;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;transition:opacity .2s linear;width:18px}.card__trash-button:hover{opacity:.5}
 .card__like-button_active{background:url(fe17a515669479b1e649.svg) 50%/auto auto no-repeat}
 @media (max-width:768px){.page__footer{padding:0 30px}}@media (max-width:398px){.page__footer{padding:0 20px}}
@@ -33,9 +37,10 @@
 .popup_opened{opacity:1;visibility:visible}
 .popup_type_profile{background-color:rgba(0,0,0,.5)}
 .popup_type_add-place{background-color:rgba(0,0,0,.5)}
+.popup_type_confirmation{background-color:rgba(0,0,0,.5)}
 .popup_type_card-review{background-color:rgba(0,0,0,.9)}
 .form{font-family:Inter,Helvetica,sans-serif}
-.popup__form{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;height:330px;min-width:430px;padding:34px 36px;position:relative}@media (max-width:598px){.popup__form{min-height:322px;min-width:282px;padding:25px 22px}}
+.popup__form{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;min-width:430px;padding:34px 36px;position:relative}@media (max-width:598px){.popup__form{min-width:282px;padding:25px 22px}}
 .form__title{font-size:24px;font-weight:900;line-height:1.2;margin:0 0 54px}@media (max-width:398px){.form__title{font-size:18px;margin-bottom:75px}}
 .form__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);font-size:14px;margin:0;min-height:27px;padding:0;width:100%}
 .form__input_type_error{border-bottom:1px solid red}
@@ -44,6 +49,8 @@
 .form__field{display:flex;flex-direction:column;position:relative}
 .form__submit-button{background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;display:block;font-size:18px;line-height:1.22;margin-top:45px;min-height:50px;padding:0;transition:opacity .2s linear;width:100%}.form__submit-button:hover{opacity:.8}@media (max-width:398px){.form__submit-button{font-size:14px;min-height:46px}}
 .form__submit-button_disabled{background-color:#fff;border:1px solid #000;color:#000;cursor:default;opacity:.2}.form__submit-button_disabled:hover{opacity:.2}
+.confirmation-title{margin-bottom:38px}
+.confirmation-button{margin-top:0}
 .card-review{display:flex;flex-direction:column;font-family:Inter;font-style:normal;justify-content:space-between;margin:auto;position:relative;row-gap:10px}
 .card-review__title{color:#fff;font-size:12px;font-weight:400;line-height:1.25;margin:0}
 .card-review__img{max-height:75vh;max-width:75vw;-o-object-fit:cover;object-fit:cover}
